# onnxtools

./: .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  classify_plate_images.py  conftest.py  crop.sh  crop_pedestrian.py  crop_plate.py  demo_crop.py  demo_pipeline.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  run.sh  sitemap.xml  test.sh  third_party.sh
.claude/: hookify.warn-dangerous-rm.local.md  index.json  settings.json
.claude/commands/: speckit.tasks.md
.claude/hooks/: format-python.sh
.claude/scripts/: install_pkgs.sh
.github/workflows/: docs.yml  test.yml
.specify/memory/: constitution.md  constitution_update_checklist.md
api/: index.html
api/classifiers/: index.html
api/config/: index.html
api/detectors/: index.html
api/eval/: index.html
api/ocr/: index.html
api/pipeline/: index.html
api/result/: index.html
api/tracking/: index.html
api/utils/: index.html
configs/: CLAUDE.md  det_config.yaml  plate.yaml  shangdian.yaml  tracker_presets.yaml  visualization_presets.yaml
docs/: CLAUDE.md  annotator_usage.md  evaluation_guide.md  getting-started.md  index.md  model_support_list.md  rfdetr_coco_evaluation_report.md
docs/_hooks/: silence_griffe.py
docs/api/: classifiers.md  config.md  detectors.md  eval.md  index.md  ocr.md  pipeline.md  result.md  tracking.md  utils.md
docs/guides/: annotator_usage.md  cli-tools.md  evaluation_guide.md  mcp.md
docs/javascripts/: mermaid-init.js
docs/models/: model_support_list.md
docs/polygraphy使用指南/: README.md  api_guide.md  check.md  convert.md  debug.md  faq.md  inspect.md  run.md  surgeon.md  目录索引.md
examples/: demo_compare_detect.py  demo_crop.py  demo_detect.py  demo_pipeline.py  demo_vehicle_attribute.py
getting-started/: index.html
guides/annotator_usage/: index.html
guides/cli-tools/: index.html
guides/evaluation_guide/: index.html
guides/mcp/: index.html
guides/tracking/: index.html
infer_onnx/: CLAUDE.md  __init__.py  base_onnx.py  engine_dataloader.py  eval_coco.py  eval_ocr.py  infer_models.py  infer_utils.py  ocr_onnx.py  onnx_base.py  onnx_ocr.py  onnx_rfdetr.py  onnx_rtdetr.py  onnx_yolo.py  rfdetr_onnx.py  rtdetr_onnx.py  yolo_onnx.py
mcp_tools/: CLAUDE.md  __init__.py  config.py  models.py  server.py
mcp_tools/tools/: __init__.py  classification.py  detection.py  ocr.py  visualization.py
mcp_tools/utils/: __init__.py  error_handler.py  image_loader.py  model_manager.py  response_formatter.py
mcp_vehicle_detection/: CLAUDE.md  config.yaml
mcp_vehicle_detection/services/: detection_service.py
models/: CLAUDE.md
models/model_support_list/: index.html
models/reid/: README.md
onnxtools/: CLAUDE.md  __init__.py  config.py  pipeline.py
onnxtools/eval/: CLAUDE.md  __init__.py  eval_cls.py  eval_coco.py  eval_mot.py  eval_ocr.py  mot_data.py
onnxtools/infer_onnx/: CLAUDE.md  __init__.py  engine_dataloader.py  eval_coco.py  eval_ocr.py  experiment.py  infer_utils.py  onnx_base.py  onnx_cls.py  onnx_ocr.py  onnx_rfdetr.py  onnx_rtdetr.py  onnx_yolo.py  result.py
onnxtools/tracking/: CLAUDE.md  __init__.py  base.py  botsort.py  bytetrack.py  class_voting.py  kalman.py  matching.py  ocsort.py
onnxtools/utils/: CLAUDE.md  __init__.py  cls_metrics.py  detection_metrics.py  drawing.py  font_utils.py  image_processing.py  logger.py  logging_config.py  nms.py  ocr_metrics.py  output_transforms.py  supervision_annotator.py  supervision_converter.py  supervision_labels.py  supervision_preset.py  visualization_preset.py
openspec/: CLAUDE.md
scripts/: install_pkgs.sh
search/: search_index.json
specs/: CLAUDE.md
specs/001-baseort-result-third/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-supervision-plate-box/: api_verification_report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-delete-old-draw/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-more-annotators/: data-model.md  performance_report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-refactor-colorlayeronnx-ocronnx/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-baseonnx-postprocess-call/: COMPLETION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test_baseline.md
specs/006-make-ocr-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
test/: test_engine_loading.py  test_environment.py
tests/: CLAUDE.md  conftest.py
tests/contract/: conftest.py  test_annotator_factory_contract.py  test_annotator_pipeline_contract.py  test_benchmark_contract.py  test_cls_evaluator_contract.py  test_convert_detections_contract.py  test_draw_detections_contract.py  test_ocr_evaluator_contract.py  test_ocr_onnx_refactored_contract.py  test_preset_loading_contract.py  test_result_contract.py
tests/integration/: conftest.py  test_annotator_pipeline.py  test_basic_drawing.py  test_box_corner_integration.py  test_dot_annotator.py  test_fallback_mechanism.py  test_fill_annotators.py  test_geometric_annotators.py  test_halo_annotator.py  test_ocr_evaluation_integration.py  test_ocr_integration.py  test_percentage_bar_integration.py  test_pipeline_integration.py  test_preset_scenarios.py  test_privacy_annotators.py  test_result_integration.py  test_result_visualization.py  test_round_box_integration.py  test_supervision_only.py
tests/performance/: test_annotator_benchmark.py  test_result_plot_benchmark.py  (+1 more)
tools/: CLAUDE.md  README.md  build.sh  build_engine.py  compare_onnx_engine.py  draw_engine.py  eval.py  eval.sh  eval_cls.py  eval_mot.py  eval_ocr.py  layer_statistics.py  modify_onnx_io_names.py  modify_rfdetr.py  network_postprocess.py  tensor_selector.py
utils/: CLAUDE.md  __init__.py  annotator_factory.py  detection_metrics.py  drawing.py  font_utils.py  pipeline.py  supervision_config.py  supervision_labels.py  visualization_preset.py
(+143 files in other folders)
