[project]
name = "onnxtools"
version = "0.1.0"
description = "ONNX model inference toolkit with multi-architecture support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "numpy>=2.2.6",
    "onnx==1.17.0",
    # 不使用 [cuda,cudnn] extras，避免自动安装 nvidia-* python包
    # 系统应该已经安装了 CUDA 和 cuDNN 库（通过 apt/yum 或手动安装）
    "onnxruntime-gpu==1.22.0",
    "opencv-contrib-python>=4.12.0.88",
    "pillow>=11.3.0",
    "polygraphy>=0.49.26",
    "python-levenshtein>=0.25.0",
    "pyyaml>=6.0.2",
    "supervision==0.26.1",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
# 开发/测试工具 — 仅在跑测试、改图、调试 ONNX 图时需要
# 安装方式: uv pip install -e ".[dev]"
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "matplotlib>=3.10.6",
    "onnxslim>=0.1.65",
    "onnx-graphsurgeon",
    "colored>=2.3.1",
]

# 跟踪加速 (可选) — lap.lapjv 替代 scipy 的 linear_sum_assignment，边缘设备效果显著
# 安装方式: uv pip install -e ".[tracking-fast]"
tracking-fast = [
    "lap>=0.5.0",
]

# TensorRT加速支持 (可选)
# 安装方式: uv pip install -e ".[trt]"
# 注意: 需要先安装 pip setuptools wheel: uv pip install pip setuptools wheel
trt = [
    # 需要 NVIDIA PyPI 源 (https://pypi.nvidia.com)，远程环境不可用
    "tensorrt==8.6.1.post1",
    "tensorrt-bindings==8.6.1",
    "tensorrt-libs==8.6.1",
]

# MCP (Model Context Protocol) 支持 (可选)
# 安装方式: uv pip install -e ".[mcp]"
# 用于将 onnxtools 功能暴露给 LLM (如 Claude)
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

# 文档构建支持 (可选)
# 安装方式: uv pip install -e ".[docs]"
# 本地预览: mkdocs serve   构建: mkdocs build --strict
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-mermaid2-plugin>=1.2",
]

[project.scripts]
# MCP 服务器入口点
onnxtools-mcp = "mcp_tools.server:main"

# 构建工具依赖组：安装到 .venv 中，供 no-build-isolation-package (tensorrt) 使用
# 注意: 这与 [build-system].requires 不同，后者仅在构建 onnxtools 自身时的临时隔离环境中可用
[dependency-groups]
build = ["setuptools>=61.0", "wheel"]
dev = ["pre-commit>=4.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["onnxtools*", "mcp_tools*"]
exclude = [
    "tests*",
    "docs*",
    "data*",
    "specs*",
    "models*",
    "configs*",
    "tools*",
]

[tool.setuptools.package-data]
onnxtools = ["py.typed"]

[tool.uv]
# 配置包索引源
index-url = "https://pypi.org/simple/"
extra-index-url = [
    # NVIDIA NGC PyPI 镜像，用于TensorRT相关包
    # 远程环境无法访问，已禁用；本地需要TRT时手动添加：
    "https://pypi.nvidia.com",
]

# TensorRT包需要禁用构建隔离，因为它的安装脚本依赖pip模块
no-build-isolation-package = [
    "tensorrt",
    "tensorrt-bindings",
    "tensorrt-libs"
]

[tool.uv.workspace]
members = ["mcp_vehicle_detection"]

# Ruff 配置 - lint + format + isort 三合一
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "docs/polygraphy使用指南",  # 第三方 polygraphy 示例代码,按上游原样保留
    "third_party",              # 第三方代码不参与 lint
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without strict
]

[tool.ruff.lint.per-file-ignores]
# tools/ 下多数脚本走 try/except ImportError 探测可用性 + sys.path 操纵后再 import
"tools/build_engine.py" = ["E402"]
"tools/compare_onnx_engine.py" = ["E402"]
"tools/draw_engine.py" = ["F403", "F405"]  # trex 库官方推荐 from trex import *
"tools/layer_statistics.py" = ["F401"]
"tools/modify_onnx_io_names.py" = ["F401"]
# tests/ 用 try-import-except 检测 supervision/pytest_benchmark 等可选依赖
"tests/integration/test_basic_drawing.py" = ["F401"]
"tests/integration/test_ocr_integration.py" = ["F401"]
"tests/integration/test_supervision_only.py" = ["F401"]
"tests/performance/test_result_plot_benchmark.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["onnxtools", "mcp_tools"]
